# uefi-rs-hello

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
